--- a/info.html
+++ b/info.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/contact.html">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -27,57 +26,59 @@
             </div>
             <div class="titlebar"></div>
             <br>
-            <div class="table">
-                <div class="thincol" style="width: 6%"></div>
-                <div class="thincol">
-                    <a href="https://devpost.com/bretsky">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/devpost.png"/>
+            <div class="squeeze">
+                <div class="table">
+                    <!-- <div class="thincol" style="width: 6%"></div> -->
+                    <div class="thincol">
+                        <a href="https://devpost.com/bretsky">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/devpost.png"/>
+                                </div>
                             </div>
-                        </div>
-                    </a>
-                    <a href="https://instagram.com/brettmichaelselby">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/instagram.png"/>
+                        </a>
+                        <a href="https://instagram.com/brettmichaelselby">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/instagram.png"/>
+                                </div>
                             </div>
-                        </div>
-                    </a>              
+                        </a>              
+                    </div>
+                    <div class="thincol">
+                        <a href="https://github.com/bretsky">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/github.png"/>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="Resume.pdf">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/document.png"/>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="thincol">
+                        <a href="mailto:bmselby@edu.uwaterloo.ca">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/email.png"/>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://steamcommunity.com/id/bretsky">
+                            <div class="square">
+                                <div class="inside">
+                                    <img class="rs" src="img/steam.png"/>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-                <div class="thincol">
-                    <a href="https://github.com/bretsky">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/github.png"/>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="Resume.pdf">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/document.png"/>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="thincol">
-                    <a href="mailto:bmselby@edu.uwaterloo.ca">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/email.png"/>
-                            </div>
-                        </div>
-                    </a>
-                    <a href="https://steamcommunity.com/id/bretsky">
-                        <div class="square">
-                            <div class="inside">
-                                <img class="rs" src="img/steam.png"/>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="thincol" style="width: 6%"></div>
+                <!-- <div class="thincol" style="width: 6%"></div> -->
             </div>
             <div style="margin-bottom: 53px"></div>
             <div class="titlebar" style="position: fixed; bottom: 32px; left:  math(8% + 1px)"></div>
@@ -88,6 +89,7 @@
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="js/quotes.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
