--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/projects.html">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -109,6 +108,7 @@
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="js/quotes.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
